# cross-platform-timer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  crosstimer.c  crosstimer.h  env_main.c  main.c  meson.build  meson.options
.github/workflows/: cmake.yml  crosstimer_ci.yml
cmake/: my_c.cmake  options.cmake  utils.cmake
example/: env_main.c  main.c  meson.build  tc_cross.ini
include/: crosstimer.h
src/: crosstimer.c
